# codie-local-engines

.github/workflows/: release-local-engines.yml
local_engines/asr/: .gitignore  codie_asr_local.spec  pyproject.toml
local_engines/asr/src/codie_asr_local/: __init__.py  __main__.py  server.py
local_engines/tts/: .gitignore  codie_tts_local.spec  pyproject.toml
local_engines/tts/src/codie_tts_local/: __init__.py  __main__.py  server.py  voices.py
scripts/: build-asr-sidecar.ps1  build-asr-sidecar.sh  build-tts-sidecar.ps1  build-tts-sidecar.sh
