[project]
name = "codie-asr-local"
version = "0.1.1"
description = "Local ASR sidecar: faster-whisper behind an OpenAI-compatible /v1/audio/transcriptions HTTP server, run natively on the host by the Bridge."
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    # Pin to 0.x: huggingface_hub 1.x's metadata protocol breaks against mirror
    # endpoints (HF_ENDPOINT) and pulls in hf-xet, which bypasses mirrors. 0.x is
    # the version this sidecar was verified against. faster-whisper allows >=0.13.
    "huggingface_hub>=0.24,<1.0",
]

[project.optional-dependencies]
# No platform-specific runtime deps today; the extras exist so the build
# scripts can `pip install -e .[dev,mac]` / `.[dev,win]` symmetrically with
# host_mcp's build-sidecar scripts.
mac = []
win = []
dev = [
    "pyinstaller>=6.0",
    "httpx>=0.26",
]

[project.scripts]
codie-asr-local = "codie_asr_local.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codie_asr_local"]

[tool.ruff]
line-length = 100
target-version = "py311"
