[project]
name = "codie-tts-local"
version = "0.1.2"
description = "Local TTS sidecar: Piper behind an OpenAI-compatible /v1/audio/speech HTTP server, run natively on the host by the Bridge."
requires-python = ">=3.11"
dependencies = [
    "piper-tts>=1.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    # Pin to 0.x: huggingface_hub 1.x's metadata protocol breaks against mirror
    # endpoints and pulls in hf-xet (bypasses mirrors). 0.x is the verified version.
    "huggingface_hub>=0.24,<1.0",
]

[project.optional-dependencies]
mac = []
win = []
dev = [
    "pyinstaller>=6.0",
    "httpx>=0.26",
]

[project.scripts]
codie-tts-local = "codie_tts_local.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codie_tts_local"]

[tool.ruff]
line-length = 100
target-version = "py311"
